--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,14 @@
 cmake_minimum_required(VERSION 3.7)
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
 
 project(Ritual)
-include_directories(/home/alex/Libs/libtcod/include)
-link_directories(/home/alex/Libs/libtcod/build/autotools/.libs)
+
+find_package(Tcod REQUIRED)
+
+include_directories(${Tcod_INCLUDE_DIR})
+link_directories(${Tcod_LIB_DIR})
 
 file(GLOB SOURCES source/*.cpp)
 
 add_executable(Ritual ${SOURCES})
-target_link_libraries(Ritual tcod tcodxx)
+target_link_libraries(Ritual ${Tcod_LIBRARIES})
