changed cmakelists to fit source folder

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ include_directories(${Tcod_INCLUDE_DIR})
 link_directories(${Tcod_LIB_DIR})
 
 include_directories(include)
-file(GLOB SOURCES source/*.cpp)
+file(GLOB SOURCES source/*.cpp source/**/*.cpp)
 
 add_executable(Ritual ${SOURCES})
 target_link_libraries(Ritual ${Tcod_LIBRARIES})
