--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,9 +4,7 @@ list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
 project(Ritual)
 
 find_package(Tcod REQUIRED)
-
 include_directories(${Tcod_INCLUDE_DIR})
-
 link_directories(${Tcod_LIB_DIR})
 
 include_directories(include)
@@ -14,3 +12,6 @@ file(GLOB SOURCES source/*.cpp source/**/*.cpp)
 
 add_executable(Ritual ${SOURCES})
 target_link_libraries(Ritual ${Tcod_LIBRARIES})
+
+enable_testing()
+add_subdirectory(tests)
